# DuetMind

./: .gitignore  README.md  pyproject.toml
frontend/: app.js  index.html  styles.css
src/duetmind/: __init__.py  agents.py  analysis.py  distribution.py  exceptions.py  fsm.py  infra.py  main.py  mec.py  middleware.py  models.py  moderator.py  orchestrator.py  packaging.py  pipeline.py  prompts.py  providers.py  scoring.py  semantic.py  server.py  smoke.py  storage.py
tests/: test_analysis.py  test_destructive.py  test_distribution.py  test_fsm.py  test_infra.py  test_mec.py  test_middleware.py  test_orchestrator.py  test_packaging.py  test_phase_results.py  test_pipeline.py  test_prompts.py  test_provider_agents.py  test_providers.py  test_semantic.py  test_server.py  test_smoke.py  test_storage.py
