[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "duetmind"
version = "0.1.0"
description = "Hybrid multi-agent orchestration engine with deterministic FSM governance"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
]

[project.scripts]
duetmind = "duetmind.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]